Fixed issue with extra white space on right edge of DOM.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,10 +22,19 @@ img {
   }
 }
 
-// @media (max-width: 450px){
+// // @media(max-width: 425px){
+// //   .intro{
+// //     margin-right: -30px;
+// //     overflow: hidden;
+// //     position: relative;
+// //   }
+// // }
+//
+// @media (max-width: 425px){
 //   .myContainer{
-//     margin-right: 0 auto;
-//     padding-right: 0;
+//     margin-right: -150px;
+//     // overflow: hidden;
+//     position: relative;
 //   }
 // }
 
@@ -33,7 +42,7 @@ img {
 //////////////////////////////// NAV BAR /////////////////////////////////////
 .myNavBar{
   background-color: rgb(82,81,89);
-  width: 100%;
+  max-width: 100%;
 }
 
 .navBarContent{
@@ -1509,9 +1518,9 @@ img {
   }
 
   .aboutContentContainer{
-    width: 100%;
+    width: 84%;
     text-align: justify;
-    margin-left: 12vw;
+    margin-left: 16vw;
   }
 }
 
